--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework5.1</title>
+    <title>Homework5.2</title>
     <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/working/homework5/homework5.1/fonts/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
 </head>
 
 <body>
     <table>
         <tr class="row1">
             <td class="col1"><span class="text">choose your</span><br>pricing plan</td>
-            <td><i class="fa fa-archive"></i><br>storage</td>
-            <td><i class="fa fa-cloud-upload" aria-hidden="true"></i><br>bandwidth</td>
-            <td><i class="fa fa-envelope" aria-hidden="true"></i><br>email</td>
-            <td><i class="fa fa-life-ring" aria-hidden="true"></i><br>support</td>
-            <td><i class="fa fa-cube" aria-hidden="true"></i><br>products</td>
-            <td><i class="fa fa-users" aria-hidden="true"></i><br>users</td>
+            <td><i class="fa fa-archive fa-lg"></i><br>storage</td>
+            <td><i class="fa fa-cloud-upload fa-lg" aria-hidden="true"></i><br>bandwidth</td>
+            <td><i class="fa fa-envelope fa-lg" aria-hidden="true"></i><br>email</td>
+            <td><i class="fa fa-life-ring fa-lg" aria-hidden="true"></i><br>support</td>
+            <td><i class="fa fa-cube fa-lg" aria-hidden="true"></i><br>products</td>
+            <td><i class="fa fa-users fa-lg" aria-hidden="true"></i><br>users</td>
         </tr>
         <tr class="row2">
-            <td class="col1">standart<br><span class="baks">&#36;17</span><span class="up99">.99</span>
+            <td class="col1">
+                <p>standard</p><span class="baks">17</span><span class="up99">.99</span>
                 <span class="shift">per month</span> <button>buy now</button></td>
             <td>500gb<br>storage</td>
             <td>limited<br>bandwidth</td>
@@ -32,7 +33,8 @@
             <td>1<br>user</td>
         </tr>
         <tr class="row3">
-            <td class="col1">ultimate<br><span class="baks">&#36;37</span><span class="up99">.99</span>
+            <td class="col1">
+                <p>ultimate</p><span class="baks">37</span><span class="up99">.99</span>
                 <span class="shift">per month</span><button>buy now</button></td>
             <td>1000gb<br>storage</td>
             <td>limited<br>bandwidth</td>
@@ -42,7 +44,8 @@
             <td>10<br>users</td>
         </tr>
         <tr class="row4">
-            <td class="col1">premium<br><span class="baks">&#36;97</span><span class="up99">.99</span>
+            <td class="col1">
+                <p>premium</p><span class="baks">97</span><span class="up99">.99</span>
                 <span class="shift">per month</span><button>buy now</button></td>
             <td>2000gb<br>storage</td>
             <td>unlimited<br>bandwidth</td>
